<resources>


    <string name="welcome_heading">Ticket Booking System</string>
    <string name="Search_Movies_heading">Movies</string>
    <string name="Login_bar_title">Login</string>
    <string name="Login_info">Login</string>
    <string name="Enter_email">Enter Email</string>
    <string name="Enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="search_movies_button">Browse</string>
    <string name="app_name">Ticket Booking</string>
    <string name="Register">Register</string>
    <string name="Register_title">Register</string>
    <string name="Registeration_info">Registeration Info</string>
    <string name="Register_name">Username</string>
    <string name="Home">Home</string>
    <string name="Account">Change password</string>
    <string name="Results">Result</string>
    <string name="Detail">Description</string>
    <string name="FeedBack">FeedBack</string>

    <string name="Retrieve">Retrieve Password</string>


    <string name="Login">Login</string>
    <string name="enterusername">Enter Username</string>
    <string name="Payment">Description</string>
    <string name="SearchResult">Search_result</string>
    <string name="comedy">Comedy</string>
    <string name="sci_fi">Sci-fi</string>
    <string name="action">Action</string>
    <string name="thriller">Thriller</string>
    <string name="fantasy">Fantasy</string>
    <string name="war">War</string>
    <string name="category">Category</string>

    <!-- for navigation view-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="account">Change Password</string>


    <string-array name="Category">
        <item name="Action" />
        <item name="Comedy" />
        <item name="Drama" />
        <item name="Romance" />
        <item name="Thriller" />
        <item name="Sci-fi" />
        <item name="War" />
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback">Feedback</string>
    <string name="change_username">Change Username</string>
    <string name="purchase_history">Purchase History</string>


</resources>
