<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"

    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registeration_info"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_name"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingTop="15dp" />
        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/regName"
            android:background="@android:drawable/editbox_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter_email"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/regEmail"
            android:background="@android:drawable/editbox_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Enter_password"
            android:layout_gravity="center_horizontal"

            />
        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/regpassword"

            android:inputType="textPassword"
            android:background="@android:drawable/editbox_background" />


        <Button
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/Register"
            android:id="@+id/buttonregister"
            android:background="@drawable/round_button"
            android:layout_gravity="center_horizontal"/>


        </LinearLayout>



   </LinearLayout>