<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"

    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_info"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"

        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterusername"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/username"
            android:background="@android:drawable/editbox_background"
            android:editable="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Enter_password"
            android:layout_gravity="center_horizontal"
           />
        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/password"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPassword"
            />
<Button
    android:layout_marginTop="10dp"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:text="@string/submit"
    android:id="@+id/login"
    android:background="@drawable/round_button"
    android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_marginTop="10dp"
                    android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/Register"
                android:id="@+id/register"
                android:background="@drawable/round_button" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password"
                android:onClick="getforgpassword"
                android:id="@+id/forgotpassword"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp" />

        </LinearLayout>



</LinearLayout>
